syntax = "proto3";

option go_package = "github.com/pascalallen/grpc-go/helloworld";

package helloworld;

service HelloWorldService {
  rpc SayHello(HelloWorldRequest) returns (HelloWorldResponse) {}
  rpc CreateUser(CreateUserRequest) returns (HelloWorldResponse) {}
  rpc LoginUser(CreateUserRequest) returns (HelloWorldResponse) {}
  rpc LogoutUser(LogoutRequest) returns (HelloWorldResponse) {}
}



message HelloWorldRequest {}

message HelloWorldResponse {
    string message = 1;
}

message CreateUserRequest {
    string name = 1;
    string password = 2;
}

message LogoutRequest {
    string name = 1;
}